Issue #1070 feat : question bank filter collapse feature

--- a/org.ekstep.metadata-1.1/editor/css/contentmetaform.css
+++ b/org.ekstep.metadata-1.1/editor/css/contentmetaform.css
@@ -182,3 +182,7 @@ and collection is using 16 grid layout so
 form .ui.grid.form-bottom-allign{
     margin-bottom: 5%;
 }
+
+.marginBottomClass{
+    margin-bottom: 1%;
+}
